--- a/resume.tex
+++ b/resume.tex
@@ -232,19 +232,31 @@
 
         
         \begin{twocolentry}{
-            Sept 2000 – May 2005
+            Sept 2021 – Dec 2023
         }
             \textbf{University of Wisconsin-Madison}, BS in Computer Science\end{twocolentry}
 
         \vspace{0.10 cm}
         \begin{onecolentry}
             \begin{highlights}
-                \item GPA: 3.9/4.0 (\href{https://example.com}{a link to somewhere})
-                \item \textbf{Coursework:} Computer Architecture, Comparison of Learning Algorithms, Computational Theory
+                \item \textbf{GPA:} 4.0 (\href{https://example.com}{a link to somewhere})
+                \item \textbf{Related Coursework:} Operating Systems, Computer Networks, Algorithms and Data Structures, Database Management Systems
             \end{highlights}
         \end{onecolentry}
 
+        \vspace{0.2 cm}
 
+        \begin{twocolentry}{
+            Sept 2019 – May 2021
+        }
+            \textbf{Madison Area Technical College}, AA in Economics and Pre-Business\end{twocolentry}
+
+        \vspace{0.10 cm}
+        \begin{onecolentry}
+            \begin{highlights}
+                \item \textbf{GPA:} 3.8 (\href{https://example.com}{a link to somewhere})
+            \end{highlights}
+        \end{onecolentry}
 
     
     \section{Experience}
@@ -253,9 +265,9 @@
 
         
         \begin{twocolentry}{
-            June 2005 – Aug 2007
+            Jan 2024 – Current 
         }
-            \textbf{Software Engineer}, Apple -- Cupertino, CA\end{twocolentry}
+            \textbf{Backend Software Engineer}, Fetch -- Madison, WI\end{twocolentry}
 
         \vspace{0.10 cm}
         \begin{onecolentry}
@@ -270,9 +282,9 @@
         \vspace{0.2 cm}
 
         \begin{twocolentry}{
-            June 2003 – Aug 2003
+            May 2023 – Aug 2023
         }
-            \textbf{Software Engineer Intern}, Microsoft -- Redmond, WA\end{twocolentry}
+            \textbf{Backend Software Engineering Intern}, Fetch -- Madison, WI\end{twocolentry}
 
         \vspace{0.10 cm}
         \begin{onecolentry}
