--- a/resume.tex
+++ b/resume.tex
@@ -378,19 +378,19 @@
 
 
     
-    \section{Technologies}
+    \section{Skills}
 
 
 
         
         \begin{onecolentry}
-            \textbf{Languages:} C++, C, Java, Objective-C, C\#, SQL, JavaScript
+            \textbf{Programming Languages:} Go, Python, Java, C, SQL
         \end{onecolentry}
 
         \vspace{0.2 cm}
 
         \begin{onecolentry}
-            \textbf{Technologies:} .NET, Microsoft SQL Server, XCode, Interface Builder
+            \textbf{Technologies:} Git, Bash, AWS, Docker, RESTful APIs
         \end{onecolentry}
 
 
