--- a/resume.tex
+++ b/resume.tex
@@ -300,27 +300,19 @@
 
 
     
-    \section{Publications}
+    \section{Certifications}
 
 
 
         
         \begin{samepage}
-            \begin{twocolentry}{
-                Jan 2004
-            }
-                \textbf{3D Finite Element Analysis of No-Insulation Coils}
-            \end{twocolentry}
-
-            \vspace{0.10 cm}
-            
             \begin{onecolentry}
-                \mbox{Frodo Baggins}, \mbox{\textbf{\textit{Patrick McCarty}}}, \mbox{Samwise Gamgee}
+                \begin{highlights}
+                    \item AWS Certified Cloud Developer
+                \end{highlights}
+            \end{onecolentry}
 
-                \vspace{0.10 cm}
-                
-        \href{https://doi.org/10.1109/TASC.2023.3340648}{10.1109/TASC.2023.3340648}
-        \end{onecolentry}
+            
         \end{samepage}
 
 
