--- a/resume.tex
+++ b/resume.tex
@@ -289,11 +289,9 @@
         \vspace{0.10 cm}
         \begin{onecolentry}
             \begin{highlights}
-                \item Designed a UI for the VS open file switcher (Ctrl-Tab) and extended it to tool windows
-                \item Created a service to provide gradient across VS and VS add-ins, optimizing its performance via caching
-                \item Built an app to compute the similarity of all methods in a codebase, reducing the time from $\mathcal{O}(n^2)$ to $\mathcal{O}(n \log n)$
-                \item Created a test case generation tool that creates random XML docs from XML Schema
-                \item Automated the extraction and processing of large datasets from legacy systems using SQL and Perl scripts
+                \item Implemented a feature using the \textbf{AWS SDK}, enabling users to receive one-time security codes through phone calls in addition to the existing SMS. This new feature allows users with phones that cannot receive SMS messages to also sign up for the app.
+                \item Enhanced the customer support dashboard by integrating informative icons into the UI and replacing the use of deprecated backend routes with modern ones.
+                \item Identified and fixed a potential security concern stemming from how emails where being stored across multiple databases.
             \end{highlights}
         \end{onecolentry}
 
