work experience section

--- a/resume.tex
+++ b/resume.tex
@@ -239,7 +239,7 @@
         \vspace{0.10 cm}
         \begin{onecolentry}
             \begin{highlights}
-                \item \textbf{GPA:} 4.0 (\href{https://example.com}{a link to somewhere})
+                \item \textbf{GPA:} 4.0
                 \item \textbf{Related Coursework:} Operating Systems, Computer Networks, Algorithms and Data Structures, Database Management Systems
             \end{highlights}
         \end{onecolentry}
@@ -254,7 +254,7 @@
         \vspace{0.10 cm}
         \begin{onecolentry}
             \begin{highlights}
-                \item \textbf{GPA:} 3.8 (\href{https://example.com}{a link to somewhere})
+                \item \textbf{GPA:} 3.8
             \end{highlights}
         \end{onecolentry}
 
@@ -272,9 +272,9 @@
         \vspace{0.10 cm}
         \begin{onecolentry}
             \begin{highlights}
-                \item Reduced time to render user buddy lists by 75\% by implementing a prediction algorithm
-                \item Integrated iChat with Spotlight Search by creating a tool to extract metadata from saved chat transcripts and provide metadata to a system-wide search database
-                \item Redesigned chat file format and implemented backward compatibility for search
+                \item Reduced processing times for the app's email feature by 75\%. Improving user experience and saving the company hundreds of dollars a day in reduced AWS infrastructure costs.
+                \item Created a feature for A/B testing in app offers. Allows product owners to slowly rollout offers and evaluate performance before enabling for all users. 
+                \item Improved a critical services availability from 98\% uptime to 99.9\% by identifying and resolving issues with the usage of third party APIs.
             \end{highlights}
         \end{onecolentry}
 
