remove unneeded section from header

--- a/resume.tex
+++ b/resume.tex
@@ -165,23 +165,11 @@
         \vspace{5 pt}
 
         \normalsize
-        \mbox{Your Location}%
-        \kern 5.0 pt%
-        \AND%
-        \kern 5.0 pt%
         \mbox{\hrefWithoutArrow{mailto:patricksantos1234567@gmail.com}{patricksantos1234567@gmail.com}}%
         \kern 5.0 pt%
         \AND%
         \kern 5.0 pt%
-        \mbox{\hrefWithoutArrow{tel:+90-541-999-99-99}{0541 999 99 99}}%
-        \kern 5.0 pt%
-        \AND%
-        \kern 5.0 pt%
-        \mbox{\hrefWithoutArrow{https://yourwebsite.com/}{yourwebsite.com}}%
-        \kern 5.0 pt%
-        \AND%
-        \kern 5.0 pt%
-        \mbox{\hrefWithoutArrow{https://linkedin.com/in/patrick-mccarty-076882267}{linkedin.com/in/patrick-mccarty-076882267}}%
+        \mbox{\hrefWithoutArrow{https://linkedin.com/in/patrick-mccarty-076882267}{linkedin}}%
         \kern 5.0 pt%
         \AND%
         \kern 5.0 pt%
