remove whitespace and non-ascii char

--- a/resume.tex
+++ b/resume.tex
@@ -183,7 +183,7 @@
     \section{Experience}
 
         \begin{twocolentry}{
-            Jan 2024 – Current 
+            Jan 2024 - Current 
         }
             \textbf{Backend Software Engineer}, Fetch -- Madison, WI\end{twocolentry}
 
@@ -191,7 +191,7 @@
         \begin{onecolentry}
             \begin{highlights}
                 \item Reduced processing times for the app's email feature by 75\%. Improving user experience and saving the company hundreds of dollars a day in reduced AWS infrastructure costs.
-                \item Created a feature for A/B testing in app offers. Allows product owners to slowly rollout offers and evaluate performance before enabling for all users. 
+                \item Created a feature for A/B testing in app offers. Allows product owners to slowly rollout offers and evaluate performance before enabling them for all users. 
                 \item Improved a critical services availability from 98\% uptime to 99.9\% by identifying and resolving issues with the usage of third party APIs.
             \end{highlights}
         \end{onecolentry}
@@ -200,7 +200,7 @@
         \vspace{0.2 cm}
 
         \begin{twocolentry}{
-            May 2023 – Aug 2023
+            May 2023 - Aug 2023
         }
             \textbf{Backend Software Engineering Intern}, Fetch -- Madison, WI\end{twocolentry}
 
@@ -217,7 +217,7 @@
     \section{Education}
     
         \begin{twocolentry}{
-            Sept 2021 – Dec 2023
+            Sept 2021 - Dec 2023
         }
             \textbf{University of Wisconsin-Madison}, BS in Computer Science\end{twocolentry}
 
@@ -232,7 +232,7 @@
         \vspace{0.2 cm}
 
         \begin{twocolentry}{
-            Sept 2019 – May 2021
+            Sept 2019 - May 2021
         }
             \textbf{Madison Area Technical College}, AA in Economics and Pre-Business\end{twocolentry}
 
@@ -246,9 +246,6 @@
     
     \section{Certifications}
 
-
-
-        
         \begin{samepage}
             \begin{onecolentry}
                 \begin{highlights}
@@ -263,9 +260,6 @@
     
     \section{Projects}
 
-
-
-        
         \begin{twocolentry}{
             \href{https://github.com/sinaatalay/rendercv}{github.com/name/repo}
         }
@@ -312,13 +306,8 @@
         \end{onecolentry}
 
 
-
-    
     \section{Skills}
 
-
-
-        
         \begin{onecolentry}
             \textbf{Programming Languages:} Go, Python, Java, C, SQL
         \end{onecolentry}
@@ -326,7 +315,7 @@
         \vspace{0.2 cm}
 
         \begin{onecolentry}
-            \textbf{Technologies:} Git, Bash, AWS, Docker, RESTful APIs
+            \textbf{Technologies:} Git, Bash, AWS, Docker, RESTful APIs, DynamoDB, SQLite3
         \end{onecolentry}
 
 
