--- a/resume.tex
+++ b/resume.tex
@@ -249,7 +249,7 @@
         \begin{samepage}
             \begin{onecolentry}
                 \begin{highlights}
-                    \item AWS Certified Cloud Developer
+                    \item AWS Certified Cloud Developer -- Associate
                 \end{highlights}
             \end{onecolentry}
 
